// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Track your email engagement events
      </p>,
      "image": "Generic",
      "show": false,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Tracking Domain",
      "to": "/account/tracking-domains/create",
    }
  }
  title="Tracking Domains"
>
  <TrackingDomainsCollection
    hasSubaccounts={false}
    rows={
      Array [
        Object {
          "default": false,
          "domain": "all.verified.com",
          "status": Object {
            "cname_status": "valid",
            "compliance_status": "valid",
            "verified": true,
          },
        },
        Object {
          "default": false,
          "domain": "all.unverified.com",
          "status": Object {
            "cname_status": "unverified",
            "compliance_status": "unverified",
            "verified": false,
          },
        },
        Object {
          "default": true,
          "domain": "the.default.com",
          "status": Object {
            "cname_status": "valid",
            "compliance_status": "valid",
            "verified": true,
          },
        },
      ]
    }
  />
</Page>
`;

exports[`renders empty state 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Track your email engagement events
      </p>,
      "image": "Generic",
      "show": true,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Tracking Domain",
      "to": "/account/tracking-domains/create",
    }
  }
  title="Tracking Domains"
>
  <TrackingDomainsCollection
    rows={Array []}
  />
</Page>
`;

exports[`renders errors when present 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Track your email engagement events
      </p>,
      "image": "Generic",
      "show": false,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Tracking Domain",
      "to": "/account/tracking-domains/create",
    }
  }
  title="Tracking Domains"
>
  <ApiErrorBanner
    error={
      Object {
        "meta": Object {
          "method": "GET",
        },
        "payload": Object {
          "message": "Uh oh! It broke.",
        },
      }
    }
    reload={[Function]}
  />
</Page>
`;
